SYSAD-223 - Bamboo unit tests (#45)
* Update key path

* Fix tests path

* SYSAD-223 : Fixed some tests (#46)

* Rebaseline db

* Fix some tests